Squashed commit of the following:
commit c7e790b024bcd994dd2cef9d0b1f5ad5291720f4
Merge: ec50dd5bae0 fc81eb74e7f
Author: Juan Gea <juangea@bone-studio.com>
Date:   Tue Feb 25 00:02:00 2020 +0100

    Merge branch 'master' into bone-openvdb

commit ec50dd5bae013e3b9c856503e7ca780105718141
Merge: 1d1120d3b68 03a4d3c33f8
Author: Juan Gea <juangea@bone-studio.com>
Date:   Wed Feb 19 21:23:29 2020 +0100

    Merge branch 'master' into bone-openvdb

commit 1d1120d3b681851c98349f73353be4b364b74bbc
Author: Martin Felke <martin.felke@googlemail.com>
Date:   Sat Feb 15 18:15:16 2020 +0100

    fix for build error in cycles motionblur code

commit b6ebcb615c25c24b2af6b62a867f0fb6d6168e62
Author: Martin Felke <martin.felke@googlemail.com>
Date:   Fri Feb 14 17:47:49 2020 +0100

    was missing 4th parameter for sync_precalculated_motion

commit 75043e9af9e140ec249ca1fddcfc2211285469b6
Author: Martin Felke <martin.felke@googlemail.com>
Date:   Fri Feb 14 16:56:00 2020 +0100

    fix attempt for missing mblur, call was missing

commit 3144ad98065edd87b95cba02de117bcde2820f84
Merge: ea8970184ec 61349c9931f
Author: Martin Felke <martin.felke@googlemail.com>
Date:   Fri Feb 14 16:32:36 2020 +0100

    Merge branch 'bone-openvdb' of https://github.com/juangea/boneMaster into bone-openvdb

commit ea8970184ec69e676e9b7dfe9f9f2f3949b0e95a
Merge: cd356164064 a21f5ec5624
Author: Martin Felke <martin.felke@googlemail.com>
Date:   Fri Feb 14 16:24:10 2020 +0100

    Merge branch 'master' into bone-openvdb

commit 61349c9931feff77524cf3ac16429eeae57225c2
Merge: 9880ade5c22 68ab4dd28a2
Author: Juan Gea <juangea@bone-studio.com>
Date:   Mon Feb 3 10:38:11 2020 +0100

    Merge branch 'master' into bone-openvdb

commit 9880ade5c227fec68ddbbd88383dc5edf0c45eb9
Merge: 538f951c691 f051d47cdbc
Author: Juan Gea <juangea@bone-studio.com>
Date:   Sat Feb 1 20:54:53 2020 +0100

    Merge branch 'master' into bone-openvdb

commit 538f951c6918e709c1eecac02936d99274767ea6
Merge: 92c9531ddb9 051ee76f7f1
Au

--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -189,6 +189,7 @@ set(SRC
   intern/pbvh_bmesh.c
   intern/pbvh_parallel.cc
   intern/pointcache.c
+  intern/remesh_voxel.c
   intern/report.c
   intern/rigidbody.c
   intern/scene.c
@@ -337,6 +338,7 @@ set(SRC
   BKE_particle.h
   BKE_pbvh.h
   BKE_pointcache.h
+  BKE_remesh.h
   BKE_report.h
   BKE_rigidbody.h
   BKE_scene.h
