Squashed commit of the following:
commit a648cd47b48155ba3d592bf1319caaa73ddccafa
Author: Juan Gea <juangea@bone-studio.com>
Date:   Tue Feb 25 00:22:26 2020 +0100

    Optix support for GTX cards

commit 413bb0e48d3eb5122ff79caa0e3e741d87a680ef
Author: Juan Gea <juangea@bone-studio.com>
Date:   Tue Feb 25 00:10:03 2020 +0100

    OIDN Viewport denoise

commit d8d63bd81089880dec891c202f9827f8aa84aabb
Merge: 3659b0e1956 fc81eb74e7f
Author: Juan Gea <juangea@bone-studio.com>
Date:   Mon Feb 24 13:36:04 2020 +0100

    Merge branch 'master' into bone-cycles_283

commit 3659b0e1956bc000ecc50d299bfe42a025f85dcf
Author: Juan Gea <juangea@bone-studio.com>
Date:   Wed Feb 19 22:22:30 2020 +0100

    Adaptive Sampling adapted to Scrambel Distance

commit f2faf39d85d6ca5119965681585d47b3388264a8
Merge: 16cd77c7817 03a4d3c33f8
Author: Juan Gea <juangea@bone-studio.com>
Date:   Wed Feb 19 21:34:08 2020 +0100

    Merge branch 'master' into bone-cycles_283

commit 16cd77c7817966abc2def0ee6b829d1ef32686d9
Author: Juan Gea <juangea@bone-studio.com>
Date:   Wed Feb 19 21:18:20 2020 +0100

    Fix for adaptive sampling UI

commit a1892fe2bf3c57714ab76d29c52ff6de44583665
Author: Juan Gea <juangea@bone-studio.com>
Date:   Wed Feb 19 19:12:17 2020 +0100

    Adaptive sampling with an error

commit 86557e1ce49a7fff8ff47f67041e661c23ed9fb1
Author: Juan Gea <juangea@bone-studio.com>
Date:   Wed Feb 19 15:44:17 2020 +0100

    Adaptive sampling, wrong dithering

commit e7e0342b5af084f42654393beb314b1c67bcba33
Author: Juan Gea <juangea@bone-studio.com>
Date:   Wed Feb 19 14:18:36 2020 +0100

    Fixes for CUDA/Optix optimization

commit 584d9ecedf275b67de5143668789c557ab57ea11
Author: Juan Gea <juangea@bone-studio.com>
Date:   Wed Feb 19 12:48:08 2020 +0100

    Optix/CUDA optimization

commit 9a43f98f6bd1a6fbe95b9de3466837ebde0e3b7e
Author: Juan Gea <juangea@bone-studio.com>
Date:   Sun Feb 16 10:40:53 2020 +0100

    Scramble distance fix

commit cc19dd0cb06ad4477ec2221b9d7d637e5ad62b26
A

--- a/intern/cycles/render/CMakeLists.txt
+++ b/intern/cycles/render/CMakeLists.txt
@@ -24,6 +24,7 @@ set(SRC
   hair.cpp
   image.cpp
   integrator.cpp
+  jitter.cpp
   light.cpp
   merge.cpp
   mesh.cpp
@@ -62,6 +63,7 @@ set(SRC_HEADERS
   image.h
   integrator.h
   light.h
+  jitter.h
   merge.h
   mesh.h
   nodes.h
@@ -89,6 +91,14 @@ set(LIB
 if(WITH_CYCLES_OSL)
   list(APPEND LIB
     cycles_kernel_osl
+  )
+endif()
+
+if(WITH_OPENIMAGEDENOISE)
+  add_definitions(-DWITH_OPENIMAGEDENOISE)
+  add_definitions(-DOIDN_STATIC_LIB)
+  list(APPEND INC_SYS
+    ${OPENIMAGEDENOISE_INCLUDE_DIRS}
   )
 endif()
 
