--- a/.gitmodules
+++ b/.gitmodules
@@ -1,20 +1,12 @@
 [submodule "release/scripts/addons"]
 	path = release/scripts/addons
-	url = ../blender-addons.git
-	branch = master
-	ignore = all
+	url = https://git.blender.org/blender-addons.git
 [submodule "release/scripts/addons_contrib"]
 	path = release/scripts/addons_contrib
-	url = ../blender-addons-contrib.git
-	branch = master
-	ignore = all
-[submodule "release/datafiles/locale"]
-	path = release/datafiles/locale
-	url = ../blender-translations.git
-	branch = master
-	ignore = all
+	url = https://git.blender.org/blender-addons-contrib.git
 [submodule "source/tools"]
 	path = source/tools
-	url = ../blender-dev-tools.git
-	branch = master
-	ignore = all
+	url = https://git.blender.org/blender-dev-tools.git
+[submodule "release/datafiles/locale"]
+	path = release/datafiles/locale
+	url = https://git.blender.org/blender-translations.git
